--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
-  "name": "tuition-system",
+  "name": "tuition-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "backend/server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node backend/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.18",
+    "dotenv": "^16.6.1",
+    "exceljs": "^4.4.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.2",
+    "openai": "^6.9.1"
   }
 }
