--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "tuition-backend",
   "version": "1.0.0",
   "type": "module",
-  "main": "backend/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node backend/server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.13.2",
